fixed layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,14 +59,19 @@ p {
 #title {
     background-color: #386C7A;
     color: #fff;
+    text-align: center;
+}
 }
 
 .title-text {
     color: #fff;
+    text-align: center;
 }
 
 .title-image {
     transform: rotate(25deg);
+    text-align: center;
+
 }
 
 /* features */
@@ -74,12 +79,16 @@ p {
 #features {
     background-color: #fff;
     padding: 3% 15% 7%;
+    text-align: center;
+
 
 }
 
 .feature-icon {
     color: #72DAF7;
     margin-bottom: 1.5rem;
+    text-align: center;
+
 }
 
 .feature-icon:hover {
@@ -88,22 +97,25 @@ p {
 
 .feature-box {
     padding: 5%;
+    text-align: center;
+
 }
 
 /* call to action */
 #cta {
     background-color: #4C87BA;
     padding: 3% 15% 7%;
+    text-align: center;
+
 }
 
 .cta-text {
     font-family: 'Montserrat-Black';
     color: #fff;
+    text-align: center;
+
 }
 
-.contact:hover {
-    color: #fff;
-}
 
 /* footer */
 
